Added the gh-pages submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "doc-Config/wiki"]
 	path = doc-Config/wiki
 	url = git@github.com:andreiolaru-ro/net.xqhs.Config.wiki.git
+[submodule "doc-Config/pages"]
+	path = doc-Config/pages
+	url = git@github.com:andreiolaru-ro/net.xqhs.Config.git
